sandbox-codebase/objects/zkmulti__MCShipment__c/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study</label>
    <referenceTo>Study__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>