sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Billing_Country__c</fullName>
    <label>Billing Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>