sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Billing_Zip_Postal_Code__c</fullName>
    <label>Billing Zip Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>