sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Currency__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Currency__c</fullName>
    <label>Currency</label>
    <length>4</length>
    <type>Text</type>
</CustomField>