sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Delivered__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivered</label>
    <type>Checkbox</type>
</CustomField>