sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Delivery_Date__c</fullName>
    <label>Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>