sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__DeliveryDayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DeliveryDayOfWeek__c</fullName>
    <label>Delivery Day of Week</label>
    <length>10</length>
    <type>Text</type>
</CustomField>