sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__DeliveryTransitTime__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DeliveryTransitTime__c</fullName>
    <label>Delivery Transit Time</label>
    <length>15</length>
    <type>Text</type>
</CustomField>