sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__DropoffType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DropoffType__c</fullName>
    <label>Dropoff Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>