sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__EMailNotifyOnDeliveryAlso__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EMailNotifyOnDeliveryAlso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notify on Delivery</label>
    <type>Checkbox</type>
</CustomField>