sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__EMailRecipient1__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EMailRecipient1__c</fullName>
    <label>Email Recipient 1</label>
    <type>Email</type>
</CustomField>