sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__EMailRecipient2__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EMailRecipient2__c</fullName>
    <label>Email Recipient 2</label>
    <type>Email</type>
</CustomField>