sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__EMailRecipient3__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EMailRecipient3__c</fullName>
    <label>Email Recipient 3</label>
    <type>Email</type>
</CustomField>