sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__EstimatedPickupDatetime__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EstimatedPickupDatetime__c</fullName>
    <label>Estimated Pickup</label>
    <type>DateTime</type>
</CustomField>