sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Label_Image_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Label_Image_Type__c</fullName>
    <label>Label Image Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PNG</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>ZPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>