sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Last_Track_Update_Time__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Last_Track_Update_Time__c</fullName>
    <label>Last Track Update Time</label>
    <type>DateTime</type>
</CustomField>