sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Mod_Key__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Mod_Key__c</fullName>
    <label>Mod Key</label>
    <length>12</length>
    <type>Text</type>
</CustomField>