sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Multi_Package_Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Multi_Package_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidation</label>
    <referenceTo>zkmulti__MultiPackageShipment__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>