sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Package_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Package_Type__c</fullName>
    <label>Package Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>