sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Payment_Type__c</fullName>
    <label>Payment Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>