sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Recipient_City__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Recipient_City__c</fullName>
    <label>Recipient City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>