sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Recipient_Company__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Recipient_Company__c</fullName>
    <label>Recipient Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>