sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Recipient_Country__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Recipient_Country__c</fullName>
    <label>Recipient Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>