sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Recipient_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Recipient_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>