sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Recipient_Phone__c</fullName>
    <label>Recipient Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>