sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Reference1_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Reference1_Type__c</fullName>
    <label>Reference 1 Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>