sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Reference2_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Reference2_Type__c</fullName>
    <label>Reference 2 Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>