sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Reference2_Value__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Reference2_Value__c</fullName>
    <label>Reference 2 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>