sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Reference3_Value__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Reference3_Value__c</fullName>
    <label>Reference 3 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>