sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Return_Line__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Return_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Line</label>
    <referenceTo>zkmulti__MCQueued_Customs_Item__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>