sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Sender_Address_is_Residential__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Sender_Address_is_Residential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sender Address is Residential</label>
    <type>Checkbox</type>
</CustomField>