sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Sender_Company__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Sender_Company__c</fullName>
    <label>Sender Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>