sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Sender_Country__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Sender_Country__c</fullName>
    <label>Sender Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>