sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Sender_Email__c</fullName>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>