sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Sender_State_Province__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Sender_State_Province__c</fullName>
    <label>Sender State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>