sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Sender_Street__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Sender_Street__c</fullName>
    <label>Sender Street</label>
    <type>TextArea</type>
</CustomField>