sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Sender_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Sender_Zip_Postal_Code__c</fullName>
    <label>Sender Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>