sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Service_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Service_Type__c</fullName>
    <label>Service Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>