sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Service_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Service_Type_Name__c</fullName>
    <label>Service Type Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>