sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Shipmate_Preference__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipmate_Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Preference</label>
    <referenceTo>zkmulti__MCShipmate_Preference__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>