sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Shipment_Deleted__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipment_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipment Voided</label>
    <type>Checkbox</type>
</CustomField>