sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Shipment_Notes__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipment_Notes__c</fullName>
    <label>Shipment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>