sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__ShipmentDescription__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ShipmentDescription__c</fullName>
    <label>Shipment Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>