sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__ShipmentStatus__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ShipmentStatus__c</fullName>
    <label>Shipment Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>