sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__SignedForBy__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SignedForBy__c</fullName>
    <label>Signed For By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>