sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Status_Description__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Status_Description__c</fullName>
    <label>Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>