sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__TotalBaseCharge__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__TotalBaseCharge__c</fullName>
    <label>Total Base Charge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>