sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__TotalNetCharge__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__TotalNetCharge__c</fullName>
    <label>Total Net Charge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>