sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__TotalTaxes__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__TotalTaxes__c</fullName>
    <label>Total Taxes</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>