sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__Tracking_Stage__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Tracking_Stage__c</fullName>
    <label>Tracking Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Picked Up</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Out for Delivery</fullName>
            </value>
            <value>
                <fullName>Awaiting Packing</fullName>
            </value>
            <value>
                <fullName>Ready For Pickup</fullName>
            </value>
            <value>
                <fullName>Driver on Pickup Site</fullName>
            </value>
            <value>
                <fullName>Driver En Route</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>