sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__TransportationCharges__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__TransportationCharges__c</fullName>
    <label>Transportation Charges</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>