sandbox-codebase/objects/zkmulti__MCShipment__c/fields/zkmulti__User_Allowed_Edit_of_Recipient_Info__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__User_Allowed_Edit_of_Recipient_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Allowed Edit of Recipient Info</label>
    <type>Checkbox</type>
</CustomField>